scribble/scribble-assertions/src/test/resources/good/extensions/annotations/ChoiceWithAnnot.scr
module good.extensions.annotations.ChoiceWithAnnot;


type <java> "java.lang.integer" from "rt.jar" as int;


global protocol Proto1(role A, role B, role C)
{
	choice at A {
		ADD(x:int) from A to B;  
		ADD(z:int) from B to C;
		 
	} or {
		RES(y:int) from A to B;
		RES(z:int) from B to C; 
	}	
	
	RES(z) from B to C; 
}